# NetSeed

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md
core/: CMakeLists.txt
core/include/netseed/: memory.h  memory_types.h
core/memory/: memory.c
scripts/: run_tests.sh
sprouts/tests/: CMakeLists.txt
sprouts/tests/memory/: CMakeLists.txt  test_mbuf.c
